--- a/pom.xml
+++ b/pom.xml
@@ -50,5 +50,10 @@
       <artifactId>jblas</artifactId>
       <version>1.2.4</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>30.0-jre</version>
+    </dependency>
   </dependencies>
 </project>
